--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
+    "bootstrap": "^4.3.1",
     "css-loader": "^2.1.1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
@@ -21,6 +22,7 @@
     "node-sass": "^4.11.0",
     "punycode": "^2.1.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "sass-loader": "^7.1.0",
